<resources>
    <string name="app_name">KsInfo</string>
    <string name="TextTimetable">Расписание</string>
    <string name="TextInfoHeader">Информация</string>
    <string name="TextScheduleHeader">Расписание</string>
    <string name="TextSubjectListHeader">Предметы</string>
    <string name="TextCabinetListHeader">Кабинеты</string>
    <string name="TextLoginHeader">Логин</string>
    <string name="TextProfileHeader">Личный кабинет</string>
    <string name="TextSettingsHeader">Настройки</string>
    <string name="TextNotificationsHeader">Уведомления</string>
    <string name="TextMessagesHeader">Сообщения</string>
    <string name="TextSendingMessagesHeader">Отправка сообщений</string>
    <string name="TextChangesHeader">Замены</string>
    <string name="TextClubsHeader">Кружки</string>
    <string name="TextMyClubsHeader">Мои кружки</string>
    <string name="TextMyDocumentsHeader">Мои документы</string>
    <string name="TextMyNotesHeader">Мои справки</string>
    <string name="TextOrderNotesHeader">Заказ справки</string>
    <string name="TextAskQuestionHeader">Задать вопрос</string>
    <string name="TextStudentCouncilHeader">Студсовет</string>
    <string name="TextPsychologistHeader">Психолог</string>
    <string name="ClubDescriptionHeader">Описание кружка</string>
    <string name="LoginHint">Логин</string>
    <string name="PasswordHint">Пароль</string>
    <string name="LoginButtonText">Вход</string>
    <string name="ForgotPassword">Забыли пароль?</string>
    <string name="NoRegistration">Продолжить без регистрации</string>
    <string name="ProfileNameGuest">Гость</string>
    <string name="ProfileDescriptionStudent">Студент группы</string>
    <string name="ProfileDescriptionAdmin">Администратор</string>
    <string name="ProfileButtonText">Зарегистрироваться</string>
    <string name="ProfileInitialGroup">3ИСП9-4</string>
    <string name="WeekInfoHeader">Неделя</string>
    <string name="WeekInfoInitialText">Знаменатель</string>
    <string name="TodayInfoHeader">Сегодня</string>
    <string name="DinnerInfoHeader">Обед</string>
    <string name="DinnerInfoTextDefault">Нет информации</string>
    <string name="EventsButtonText">Мероприятия</string>
    <string name="NewsButtonText">Новости</string>
    <string name="NoNews">Новости</string>
    <string name="ZeroNotificationsText">У вас нет новых уведомлений</string>
    <string name="ZeroChangesText">Замены не найдены</string>
    <string name="ZeroMyClubsText">Вы не зачислены ни в одну секцию дополнительного образования</string>
    <string name="MyDocumentsUnavailableText">Загрузка файлов временно недоступна</string>
    <string name="ZeroNotesText">У вас нет ни одной справки</string>
    <string name="LeftMenuDefaultText">Ничего</string>
    <string name="LeftMenuProfileText">Личный кабинет</string>
    <string name="LeftMenuNotificationsText">Уведомления</string>
    <string name="LeftMenuScheduleText">Расписание</string>
    <string name="LeftMenuChangesText">Замены</string>
    <string name="LeftMenuEducationText">Доп. Образование</string>
    <string name="LeftMenuClubsText">Кружки</string>
    <string name="LeftMenuMyClubsText">Мои кружки</string>
    <string name="LeftMenuMyDocumentsText">Мои документы</string>
    <string name="LeftMenuMyNotesText">Мои справки</string>
    <string name="LeftMenuOrderNotesText">Заказать справку</string>
    <string name="LeftMenuAskQuestionText">Задать вопрос</string>
    <string name="LeftMenuStudsovetText">Студсовет</string>
    <string name="LeftMenuPsychologistText">Психолог</string>
    <string name="QuestionGoal">Цель обращения</string>
    <string name="QuestionGoalStandard">Выберите цель обращения</string>
    <string name="QuestionNumber">Ваш контактный телефон</string>
    <string name="QuestionYourQuestion">Ваше обращение</string>
    <string name="QuestionButton">Отправить сообщение</string>
    <string name="PsychologistText">Здравствуйте студенты.

Немного расскажу вам о психологической службе колледжа.

Психологи находятся на двух площадках «Коломенское-2» и «Рязанское-6».  Но получить консультацию вы можете, обучаясь на любой площадке. Психологи приедут в то образовательное подразделение, которое необходимо.

Работу служба ведет в нескольких направлениях: индивидуальная работа со студентами, и работа с группой студентов по образовательным программам «Психология» и «Мастерская по психологии».

Также психологи всегда помогут вам в решении конфликтных ситуаций студент-студент, студент-педагог.

Наши специалисты обладают  профессиональными знаниями, владеют методиками, которые помогли многим студентам.

Педагог-психолог подразделения «Коломенское» Бареева Марина Ивановна, тел.: 8(966)056-43-53.

Педагог-психолог подразделения «Рязанское» Васильева Наталья Владимировна, тел.:  8(907)736-69-19

На консультации вы сможете определить причины возникших проблем и способы их решении; мы вместе обнаружим, что мешает вам стать лучше; вы обретете способность лучше понимать себя самого, научитесь управлять своим состоянием и образом мыслей.

Итак, в каких случаях нужно обращаться к психологу:

у вас что-то не получается, вы перепробовали все известные вам способы, но задача не решилась, вы «ходите по кругу»;
вы переживаете серьезный стресс, и у вас нет сил справиться с ситуацией: вы переживаете потерю и нет сил для выхода из кризисного состояния;
вы хотите достичь большего, действовать более эффективно, экономя время и силы для достижения нужных вам результатов;
вам тревожно, утерян вкус к жизни, есть страхи, которые мешают;
вам сложно общаться с людьми, вы постоянно чувствуете от них опасность, у вас нет друзей;
вам одиноко и вы не знаете, как из этого выйти;
вы не удовлетворены своей жизнью и хотите что-то поменять.
Не стоит идти к психологу, если вы ищете, кто бы взял ваши трудности на себя и решил бы их за вас;

Групповые программы проходят в тренинговой форме работы. В процессе специально организованного общения, участники тренингов решают вопросы личностного развития, формируют навыки уверенности в себе и общения, находят выходы из трудных жизненных ситуаций. Поэтому, на тренинг стоит идти тогда, когда вы хотите изменений. Все наши тренинги проходят в атмосфере искренности, принятия и поддержки.

Теперь вы знаете,  как работает наша психологическая служба, и можете выбрать  наиболее комфортную и интересную для вас форму работы.

До встречи.</string>
    <string name="ClubDefaultName">Кружок</string>
    <string name="ClubDefaultDescription">Описание</string>
    <string name="SettingsNotificationsHeader">Уведомления</string>
    <string name="SettingsNotificationsDescription">Оповещение при получении новых уведомлений</string>
    <string name="ChooseNoteType">Выберите тип справки</string>
    <string name="ChooseNoteTypeButtonDefault">Выберите тип справки</string>
    <string name="NoteForDefault">Справка для предоставления в </string>
    <string name="NoteOrderType">Тип документа для выдачи</string>
    <string name="NoteOrderTypeButtonDefault">Тип документа для выдачи</string>
    <string name="MakeOrderButton">Сформировать запрос</string>
    <string name="DefaultMessageHeader">Группе 3ИСП9-4</string>
    <string name="DefaultMessageText">Текст сообщения, текст сообщения, текст сообщения, текст сообщения</string>
    <string name="DefaultMessageTime">12:00</string>
    <string name="SendNewMessageText">Отправить новое сообщение</string>
    <string name="SendMessageActivityHeader">Отправка сообщений</string>
    <string name="SendMessageHeader">Заголовок сообщения</string>
    <string name="SendMessageFor">Назначение сообщения</string>
    <string name="SendMessageForAll">Всем</string>
    <string name="SendMessageForGroup">Группе</string>
    <string name="SendMessageMessage">Сообщение</string>
    <string name="SendMessageSend">Отправить</string>
    <string name="MessageDescriptionActivityHeader">Сообщение</string>
    <string name="MessageDescriptionHeaderDefault">Заголовок сообщения</string>
    <string name="MessageDescriptionDateText">Дата отправки: </string>
    <string name="MessageDescriptionDateDefault">дата</string>
    <string name="MessageDescriptionTextDefault">Vivamus ultrices risus at erat placerat, vel consequat est sodales. Nunc in sem id massa vestibulum pharetra ac quis nibh. Ut malesuada luctus sodales. Maecenas elit lorem, porttitor vitae nisi et, tincidunt gravida mi. Mauris eget aliquam mauris. Proin viverra dignissim nisl eu accumsan. Sed eu tincidunt felis. Cras porttitor nulla sit amet dui rhoncus finibus. Morbi arcu nisi, aliquam in libero ut, lacinia pretium ligula. Aenean molestie, ligula vel accumsan luctus, turpis nunc pharetra tellus, sit amet dapibus ex mauris ut augue.</string>
    <string name="NewsTitleDefault">Заголовок новости</string>
    <string name="NewsLinkDefault">www.google.com</string>
    <string name="NewsDateDefault">01.01.2020</string>
    <string name="EventDateNumberDefault">29</string>
    <string name="EventDateMonthDefault">Февраля</string>
    <string name="EventTitleNumberDefault">Видеоэкскурсии по столичным паркам. «Зарядье»: природный парк под стенами Кремля</string>
    <string name="EventDescriptionDefault">Участие студентов КС-54, членов ВПК и ВМК в организуемом "ДДТ на Таганке" и Российским военно-историческим обществом Лектории "Оборона Москвы и коренной перелом в Великой Отечественной Войне", посвящённом Году Славы и Памяти - 75 летию Победы в ВОВ</string>
    <string name="StudentCHeader">Студенческий совет</string>
    <string name="StudentCDescription">Студенческий Совет КС№54 создан с целью предоставить каждому человеку шанс найти новые возможности для реализации своих интеллектуальных и творческих способностей, развития инициативных и формирования лидерских качеств.

Наша работа направлена на создание благоприятной атмосферы для досуга студентов Колледжа.

Если тебе скучно, и кажется, что жизнь проходит мимо, а тебе хочется это изменить, то мы будем рады видеть тебя в рядах нашей большой и дружной команды!

Студенческий Совет КС№54— это команда людей, уверенных в том, что, создавая новые возможности, мы открываем дверь в будущее. Наша цель — реализация новых идей, поиск оригинальных решений и движение только вперед!</string>
    <string name="StudentCMembersHeader">Состав</string>
    <string name="StudentCMembersDescription">Если ты заинтересовался, хочешь уточнить детали и задать вопросы, тебе ответят следующие люди:</string>
    <string name="StudentCMember1Name">Карел Александра Ивановна</string>
    <string name="StudentCMember1Role">Куратор Студенческого совета</string>
    <string name="StudentCMember1Phone">+7(999)735-14-02</string>
    <string name="StudentCMember1Email">Karel@кс54.рф</string>
    <string name="StudentCMember2Name">Селезнёв Никита Анатоль</string>
    <string name="StudentCMember2Role">и.о. Председатель Студенческого Совета</string>
    <string name="ScheduleCardHeaderDefault">День недели</string>
    <string name="ScheduleCardSubjectDefault">Предмет</string>
    <string name="ScheduleCardCabinetDefault">666</string>
    <string name="ChangesHeaderTextDefault">Замена пары №1</string>
    <string name="ChangesSubject1Default">МДК.11.01. Технология разработки и защиты баз данных</string>
    <string name="ChangesSubject2Default">Иностранный язык в профессиональной деятельности</string>
    <string name="ChangesNa">на</string>
    <string name="ScheduleTableFirstColumnHeader">№</string>
    <string name="ScheduleTableSecondColumnHeader">Предмет</string>
    <string name="ScheduleTableThirdColumnHeader">Каб.</string>
    <string name="ScheduleTableFourthColumnHeader">Время</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="Time1">09:00–10:40</string>
    <string name="Time2">10:55–12:35</string>
    <string name="Time3">12:50–14:30</string>
    <string name="Time4">14:30–16:25</string>
</resources>