<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:id="@+id/EventBackground"
    android:background="@color/KsLightBlue"
    android:padding="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginLeft="5dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            >

            <TextView
                android:id="@+id/EventDateNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="@color/KsWhite"
                android:text="@string/EventDateNumberDefault"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:id="@+id/EventDateMonthTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/KsWhite"
                android:textSize="24sp"
                android:text="@string/EventDateMonthDefault"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/EventTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/KsOrange"
                android:text="@string/EventTitleNumberDefault"
                />

            <TextView
                android:id="@+id/EventDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/KsWhite"
                android:text="@string/EventDescriptionDefault"
                />

        </LinearLayout>



    </LinearLayout>


</RelativeLayout>